Replaced Boolean constructor calls valueOf much like we did with Integer.
git-svn-id: https://svn.apache.org/repos/asf/cayenne/main/trunk/framework/cayenne-jdk1.5-unpublished@613741 13f79535-47bb-0310-9956-ffa450edef68